--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ label{
     display: flex;
     align-items: center;
     cursor: pointer;
+    transition: 0.5s;
 }
 
 .circle{
@@ -83,6 +84,7 @@ label{
 
 input[type="checkbox"]:checked + label {
     background-color: black;
+    transition: 0.5s;
 }
 
 input[type="checkbox"]:checked + label .circle{
@@ -97,7 +99,6 @@ input[type="checkbox"]:checked + label .sun{
 
 input[type="checkbox"]:checked + label .light{
     opacity: 0;
-    /* display: none; */
     transition: 0.5s;
 }
 
